src/test/testData/parser/good/FlowWhile.basic
While A>3
    2->A
    While Ans
        getKey
    End
    Disp A