src/test/testData/parser/bad/FlowWhile.basic
While
    2->A
    While A=2,
        3->A
    End